# code-outline-graph

./: .gitignore  AGENTS.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.codex/: config.toml
.cursor/: mcp.json
.gemini/: settings.json
.github/workflows/: publish.yml
src/code_outline_graph/: cli.py  db.py  embeddings.py  indexer.py  parser.py  paths.py  search.py  server.py  watcher.py
src/code_outline_graph/skill/: SKILL.md  examples.md
tests/: conftest.py  test_cli_build_config.py  test_db.py  test_indexer_performance.py  test_parser.py  test_paths.py
