[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-outline-graph"
version = "0.2.1"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.6.0",
    "sqlite-vec>=0.1.0",
    "fastembed>=0.3.0",
    "watchdog>=4.0.0",
    "gitignore-parser>=0.1.9",
]

[project.scripts]
code-outline-graph = "code_outline_graph.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_outline_graph"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
