[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-outline-graph"
version = "0.2.24"
requires-python = ">=3.9"
description = "Symbol-level code indexer MCP server — token-efficient AI editing with confirm-before-read flow"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Rushikesh Sakharle", email = "rishiananya123@gmail.com"}]
keywords = ["mcp", "ai", "code-indexer", "tree-sitter", "claude", "cursor", "codex"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Editors :: Integrated Development Environments (IDE)",
]
dependencies = [
    "mcp>=1.0.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-language-pack>=0.6.0",
    "sqlite-vec>=0.1.0",
    "fastembed>=0.3.0",
    "watchdog>=4.0.0",
    "gitignore-parser>=0.1.9",
]

[project.scripts]
code-outline-graph = "code_outline_graph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/code_outline_graph"]

[dependency-groups]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0"]
